fitz roy 201 primer input

--- a/calculadora_de_viajes.html
+++ b/calculadora_de_viajes.html
@@ -70,7 +70,8 @@
 				<h6 class="subhead">Origen </h6>
 				<br>
 				<div id="direccion-inputs">
-					<input class="direccion" id="primer-direccion" type="text" placeholder="Ingresá una Direccion">
+					<input value="Fitz Roy 201, Buenos Aires, Argentina" class="direccion" id="primer-direccion"
+						type="text" placeholder="Ingresá una Direccion">
 				</div>
 
 				<br>
