--- a/calculadora_de_viajes.html
+++ b/calculadora_de_viajes.html
@@ -119,7 +119,7 @@
 				<div id="map"></div>
 				<div id="output-distancia"> </div>
 				<br>
-				<div class="table-wrapper">
+				<!-- <div class="table-wrapper">
 					<table class="alt">
 						<thead>
 							<tr>
@@ -162,7 +162,7 @@
 							</tr>
 						</tfoot>
 					</table>
-				</div>
+				</div> -->
 			</section>
 		</div>
 
