--- a/calculadora_de_viajes.html
+++ b/calculadora_de_viajes.html
@@ -90,79 +90,76 @@
 				</div>
 
 				<br>
-				<h6 class="subhead">Vehiculo</h6>
+				<h6 class="subhead">Utilitario</h6>
 				<br>
 				<div class="checklist">
-					<input type="radio" id="camioneta" name="fav_language" value="HTML" checked>
-					<label for="camioneta">Fiat Fiorito</label><br>
+					<input type="radio" id="Chico" name="utilitario" value="C" checked>
+					<label for="camioneta">Pequeño</label><br>
 
-					<input type="radio" id="css" name="fav_language" value="CSS">
-					<label for="css">Iveco Daily</label><br>
+					<input type="radio" id="Mediano" name="utilitario" value="M">
+					<label for="css">Mediano</label><br>
 
-					<input type="radio" id="javascript" name="fav_language" value="JavaScript">
-					<label for="javascript">Sprinter</label><br>
 				</div>
 				<br>
-				<h6 class="subhead">Conductores</h6>
+				<h6 class="subhead">Carga Explosiva</h6>
 				<br>
 				<div class="checklist">
-					<input type="radio" id="c1" name="conductores" value="1" checked>
-					<label for="c1">1 </label><br>
+					<input type="radio" id="c1" name="explosivo" value="No" checked>
+					<label for="c1">No </label><br>
 
-					<input type="radio" id="c2" name="conductores" value="2">
-					<label for="c2">2 </label><br>
+					<input type="radio" id="c2" name="explosivo" value="Si">
+					<label for="c2">Si </label><br>
 				</div>
 				<br>
 				<br>
-				<button id="calcular-distancia" onclick="calcular_distancia()">Calcular</button>
+				<button id="calcular-distancia" onclick="calcular_distancia()">Calcular</button> let utilitario = "C";
+				let explosivo = false;
 				<br><br><br>
 				<div id="map"></div>
-				<div id="output-distancia"> </div>
+				<div> </div>
 				<br>
-				<!-- <div class="table-wrapper">
+				<div class="table-wrapper">
 					<table class="alt">
 						<thead>
 							<tr>
-								<th>Name</th>
-								<th>Description</th>
-								<th>Price</th>
+								<th colspan="2" style="text-align: center; background-color: cornflowerblue;">Resultado
+								</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<td>Item One</td>
-								<td>Ante turpis integer aliquet porttitor.</td>
+								<td>Distancia Total</td>
+								<td id="output-distancia"></td>
+							</tr>
+							<tr>
+								<td>Recorrido</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Choferes</td>
 								<td>29.99</td>
 							</tr>
 							<tr>
-								<td>Item Two</td>
-								<td>Vis ac commodo adipiscing arcu aliquet.</td>
+								<td>Precio en Dolares</td>
 								<td>19.99</td>
 							</tr>
 							<tr>
-								<td>Item Three</td>
-								<td> Morbi faucibus arcu accumsan lorem.</td>
+								<td>Tipo de Cambio</td>
 								<td>29.99</td>
 							</tr>
 							<tr>
-								<td>Item Four</td>
-								<td>Vitae integer tempus condimentum.</td>
-								<td>19.99</td>
-							</tr>
-							<tr>
-								<td>Item Five</td>
-								<td>Ante turpis integer aliquet porttitor.</td>
+								<td>Precio en Pesos</td>
 								<td>29.99</td>
 							</tr>
 						</tbody>
-						<tfoot>
+						<!-- <tfoot>
 							<tr>
-								<td colspan="2"></td>
+								<td colspan="1"></td>
 								<td>100.00</td>
 							</tr>
-						</tfoot>
+						</tfoot> -->
 					</table>
-				</div> -->
+				</div>
 			</section>
 		</div>
 
@@ -276,6 +273,31 @@
 			console.log(input_1_ac.getPlace())
 		}
 
+		function formula_costos(utilitario, km_zona_1, km_zona_2, explosivos) {
+			const ZONA_1_UTILITARIOS_CHICO = 0.94;
+			const ZONA_1_UTILITARIOS_MEDIANO = 1.34;
+			const ZONA_1_CONDUCTOR_ADICIONAL = 0.43;
+
+			const ZONA_2_UTILITARIOS_CHICO = 1.03;
+			const ZONA_2_UTILITARIOS_MEDIANO = 1.43;
+			const ZONA_2_CONDUCTOR_ADICIONAL = 0.52;
+
+			let costo = 0;
+
+			if (utilitario === "C") {
+				costo += km_zona_1 * ZONA_1_UTILITARIOS_CHICO + km_zona_2 * ZONA_2_UTILITARIOS_CHICO
+			} else if (utilitario === "M") {
+				costo += km_zona_1 * ZONA_1_UTILITARIOS_MEDIANO + km_zona_2 * ZONA_2_UTILITARIOS_MEDIANO
+			}
+
+			if (explosivos) {
+				costo += km_zona_1 * ZONA_1_CONDUCTOR_ADICIONAL + km_zona_2 * ZONA_2_CONDUCTOR_ADICIONAL;
+			}
+
+			return costo;
+
+		}
+
 		function calcular_distancia() {
 
 			var iv1 = document.getElementById("primer-direccion").value;
@@ -346,23 +368,59 @@
 				origin: waypoints[0].location,
 				destination: waypoints[1].location,
 				waypoints: waypoints.slice(2),
-				optimizeWaypoints: true,
+				optimizeWaypoints: false,
 				travelMode: google.maps.TravelMode.DRIVING,
 			};
 
 			directionsService.route(request, function (response, status) {
 				if (status === google.maps.DirectionsStatus.OK) {
 					directionsRenderer.setDirections(response);
+					var northernDistance = 0;
+					var southernDistance = 0;
 					var totalDistance = 0;
+					var referenceLatitude = -39;
+
 					var legs = response.routes[0].legs;
 					for (var i = 0; i < legs.length; i++) {
-						totalDistance += legs[i].distance.value; // distance in meters
+						var leg = legs[i];
+						var startLocation = leg.start_location;
+						var endLocation = leg.end_location;
+
+						// Check if the midpoint latitude is above or below the reference
+						var midLatitude = (startLocation.lat() + endLocation.lat()) / 2;
+						if (midLatitude > referenceLatitude) {
+							northernDistance += leg.distance.value;
+						} else {
+							southernDistance += leg.distance.value;
+						}
+						totalDistance += leg.distance.value;
 					}
-					totalDistance = totalDistance / 1000; // Convierto metros a kilometos
 
-					document.getElementById('output-distancia').innerHTML = "Distancia Total Recorrida: " + totalDistance + " km";
+					// Convert meters to kilometers and update output
+					northernDistance = northernDistance / 1000;
+					southernDistance = southernDistance / 1000;
+					totalDistance = totalDistance / 1000;
 
-				} else { console.error("Directions request failed. Status:", status); }
+					document.getElementById('output-distancia').innerHTML = Math.ceil(totalDistance) + " km";
+
+					const utilitarioRadio = document.querySelector('input[name="utilitario"]:checked'); // Select checked radio for "fav_language"
+					const explosivoRadio = document.querySelector('input[name="explosivo"]:checked'); // Select checked radio for "explosivo"
+
+
+					let utilitario = utilitarioRadio.value;
+					let explosivo = explosivoRadio.value === "Si";
+
+					console.log(utilitarioRadio);
+					console.log(explosivoRadio);
+					console.log(utilitarioRadio.value);
+					console.log(explosivoRadio.value);
+					console.log("Utilitario: " + utilitario);
+					console.log("Explosivo: " + explosivo);
+					let costo_dolares = formula_costos(utilitario, northernDistance, southernDistance, explosivo)
+
+				} else {
+					console.error("Directions request failed. Status:", status);
+				}
 			});
 		}
 	</script>
