--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" href="images/logo.svg" type="image/svg+xml">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
@@ -53,7 +54,7 @@
 		<div id="main">
 			<div class="inner">
 				<header>
-					<h1>Esto es DGM Utilidades, una pagina de herramientas para problemas especificos de DGM.
+					<h1>DGM Utilidades, una pagina de herramientas para problemas especificos de DGM.
 					</h1>
 					<p>Haz click en alguno de los cuadros de abajo para ver una herramienta.</p>
 				</header>
