--- a/calculadora_de_viajes.html
+++ b/calculadora_de_viajes.html
@@ -47,6 +47,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="calculadora_de_viajes.html">Calculadora de Viajes</a></li>
+				<li><a href="descargas.html">Archivos de Uso Frecuente</a></li>
 			</ul>
 		</nav>
 
