--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="calculadora_de_viajes.html">Calculadora de Viajes</a></li>
+				<li><a href="descargas.html">Archivos de Uso Frecuente</a></li>
 			</ul>
 		</nav>
 
@@ -74,10 +75,10 @@
 						<span class="image">
 							<img src="images/pic02.jpg" alt="" />
 						</span>
-						<a href="generic.html">
-							<h2>Lorem</h2>
+						<a href="descargas.html">
+							<h2>Documentos</h2>
 							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+								<p>Archivos para descargar</p>
 							</div>
 						</a>
 					</article>
