--- a/descargas.html
+++ b/descargas.html
@@ -73,7 +73,7 @@
 					Materiales Radiactivos</a>
 				<br><br>
 				<h3>Normativa Maritima</h3>
-				<a href="/assets/pdf/6-2011-5.pdf" download>PREFECTURA NAVAL ARGENTINA</a>
+				<a href="/assets/pdf/6-2011-5.pdf" download>Prefectura Naval Argentina</a>
 			</div>
 		</div>
 
