--- a/descargas.html
+++ b/descargas.html
@@ -53,7 +53,7 @@
 		<!-- Main -->
 		<div id="main">
 			<div class="inner">
-				<h1>Archivos de uso frecuente</h1>
+				<h1>Archivos de Uso Frecuente</h1>
 				<h3>Normativa ANAC</h3>
 				<a href="assets/pdf/Boletín informativo MP 1-2024.pdf" download>Boletín informativo MP 1-2024</a>
 				<br>
