--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 							<img src="images/pic02.jpg" alt="" />
 						</span>
 						<a href="descargas.html">
-							<h2>Documentos</h2>
+							<h2>Archivos</h2>
 							<div class="content">
-								<p>Archivos para descargar</p>
+								<p>Archivos de Uso Frecuente</p>
 							</div>
 						</a>
 					</article>
