--- a/descargas.html
+++ b/descargas.html
@@ -69,11 +69,11 @@
 				<br>
 				<br>
 				<h3>Autoridad Regultoria Nuclear</h3>
-				<a href="/assets/pdf/10-16-1_r03.pdf" download>Transporte de
+				<a href="assets/pdf/10-16-1_r03.pdf" download>Transporte de
 					Materiales Radiactivos</a>
 				<br><br>
 				<h3>Normativa Maritima</h3>
-				<a href="/assets/pdf/6-2011-5.pdf" download>Prefectura Naval Argentina</a>
+				<a href="assets/pdf/6-2011-5.pdf" download>Prefectura Naval Argentina</a>
 			</div>
 		</div>
 
