--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							</div>
 						</a>
 					</article>
-					<article class="style3">
+					<!-- <article class="style3">
 						<span class="image">
 							<img src="images/pic03.jpg" alt="" />
 						</span>
@@ -92,8 +92,8 @@
 								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 							</div>
 						</a>
-					</article>
-					<article class="style4">
+					</article> -->
+					<!-- <article class="style4">
 						<span class="image">
 							<img src="images/pic04.jpg" alt="" />
 						</span>
@@ -191,7 +191,7 @@
 								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 							</div>
 						</a>
-					</article>
+					</article> -->
 				</section>
 			</div>
 		</div>
