--- a/descargas.html
+++ b/descargas.html
@@ -57,7 +57,7 @@
 				<h3>Normativa ANAC</h3>
 				<a href="assets/pdf/Boletín informativo MP 1-2024.pdf" download>Boletín informativo MP 1-2024</a>
 				<br>
-				<a href="assets/pdf/Boletín informativo MP 1-2024 english version (1).pdf" download>Boletín informativo
+				<a href="assets/pdf/Boletín informativo MP 1-2024 english version.pdf" download>Boletín informativo
 					MP 1-2024 (inglés)</a>
 				<br>
 				<a href="assets/pdf/para solapa Normativa ANAC Relevante.docx" download>Solapa Normativa ANAC
