--- a/descargas.html
+++ b/descargas.html
@@ -11,6 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/descargas.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
@@ -45,7 +46,7 @@
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="calculadora_de_viajes.html">Calculadora de Viajes</a></li>
+				<li><a href="calculadora_de_viajes.html">Calculadora de Viajes Larga Distancia</a></li>
 				<li><a href="descargas.html">Archivos de Uso Frecuente</a></li>
 			</ul>
 		</nav>
@@ -54,26 +55,69 @@
 		<div id="main">
 			<div class="inner">
 				<h1>Archivos de Uso Frecuente</h1>
+
 				<h3>Normativa ANAC</h3>
-				<a href="assets/pdf/Boletín informativo MP 1-2024.pdf" download>Boletín informativo MP 1-2024</a>
-				<br>
-				<a href="assets/pdf/Boletín informativo MP 1-2024 english version.pdf" download>Boletín informativo
-					MP 1-2024 (inglés)</a>
-				<br>
-				<a href="assets/pdf/para solapa Normativa ANAC Relevante.docx" download>Solapa Normativa ANAC
-					Relevante</a>
-				<br>
-				<a href="assets/pdf/RAAC PARTE 142.pdf" download>RAAC Parte 142</a>
-				<br>
-				<a href="assets/pdf/RAAC PARTE 18.pdf" download>RAAC Parte 18</a>
-				<br>
-				<br>
+
+				<div class="download-container">
+					<p>BOLETÍN INFORMATIVO MERCANCÍAS PELIGROSAS - DOA N°01/2024</p>
+					<p>Aclaraciones sobre la Discrepancia Estatal RA 1 de la OACI</p>
+					<p>9-Ene-2024</p>
+					<div class="download-links-container">
+						<a href="assets/pdf/Boletín informativo MP 1-2024.pdf" download>Boletín informativo MP
+							1-2024</a> <br>
+						<a href="assets/pdf/Boletín informativo MP 1-2024 english version.pdf" download>Boletín
+							informativo
+							MP 1-2024 (inglés)</a>
+					</div>
+				</div>
+
+
+				<div class="download-container">
+					<p>Resolución ANAC N° 83</p>
+					<p>PARTE 18: TRANSPORTE SIN RIESGOS DE MERCANCÍAS PELIGROSAS POR VÍA AÉREA - Cuarta Edición</p>
+					<p>03-Mar-2022</p>
+					<div class="download-links-container">
+						<a href="assets/pdf/RAAC PARTE 18.pdf" download>RAAC Parte 18</a>
+					</div>
+				</div>
+
+
+				<div class="download-container">
+					<p>Resolución ANAC N°546</p>
+					<p>PARTE 142: CENTROS DE ENTRENAMIENTO DE AERONÁUTICA CIVIL - Cuarta Edición</p>
+					<p>08-Sep-2023</p>
+					<div class="download-links-container">
+						<a href="assets/pdf/RAAC PARTE 142.pdf" download>RAAC Parte 142</a>
+					</div>
+				</div>
+
+
 				<h3>Autoridad Regultoria Nuclear</h3>
-				<a href="assets/pdf/10-16-1_r03.pdf" download>Transporte de
-					Materiales Radiactivos</a>
-				<br><br>
+
+				<div class="download-container">
+					<p>NORMA AR 10.16.1 – Revisión 3</p>
+					<p>TRANSPORTE DE MATERIALES RADIACTIVOS</p>
+					<p>01-Feb-2016</p>
+					<div class="download-links-container">
+						<a href="assets/pdf/10-16-1_r03.pdf" download>Transporte de
+							Materiales Radiactivos</a>
+					</div>
+				</div>
+
+
 				<h3>Normativa Maritima</h3>
-				<a href="assets/pdf/6-2011-5.pdf" download>Prefectura Naval Argentina</a>
+
+				<div class="download-container">
+					<p>ORDENANZA Nº 05-11 (DPAM)</p>
+					<p>“NORMAS DE CAPACITACIÓN OBLIGATORIA PARA EL PERSONAL DE TIERRA VINCULADO AL TRANSPORTE MARÍTIMO,
+						FLUVIAL Y LACUSTRE DE MERCANCÍAS PELIGROSAS”</p>
+					<p>02-may-2011</p>
+
+					<div class="download-links-container">
+						<a href="assets/pdf/6-2011-5.pdf" download>Prefectura Naval Argentina</a>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
