--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="calculadora_de_viajes.html">Calculadora de Viajes</a></li>
+				<li><a href="calculadora_de_viajes.html">Calculadora de Viajes Larga Distancia</a></li>
 				<li><a href="descargas.html">Archivos de Uso Frecuente</a></li>
 			</ul>
 		</nav>
@@ -65,7 +65,7 @@
 							<img src="images/pic01.jpg" alt="" />
 						</span>
 						<a href="calculadora_de_viajes.html">
-							<h2>Calculadora de Viajes</h2>
+							<h2>Calculadora de Viajes de Larga Distancia</h2>
 							<div class="content">
 								<p>Calculadora de viajes por carretera en Argentina</p>
 							</div>
