--- a/calculadora_de_envios.html
+++ b/calculadora_de_envios.html
@@ -111,14 +111,14 @@
 				<select id="pais">
 				</select>
 
-				<br>
+				<br><br>
 				<button id="calcular-tabla">Calcular</button>
-				<br><br><br>
+				<br><br>
 				<div class="table-wrapper">
 					<table class="alt">
 						<thead>
 							<th> </th>
-							<th>Costo Total</th>
+							<th id="costo_total_tag">Costo Total</th>
 						</thead>
 						<tbody id="tabla2">
 							<tr>
